src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__native_multi_head_attention_out(value out0, value out1, value query, value key, value value_, int64_t embed_dim, int64_t num_head, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, value mask, int need_weights, int average_attn_weights, value mask_type);
value atg__neg_view(value self);
value atg__neg_view_copy(value self);
value atg__neg_view_copy_out(value out, value self);
value atg__nested_compute_contiguous_strides_offsets(value nested_size);
value atg__nested_from_padded(value padded, value cpu_nested_shape_example, int fuse_transform_0213);
value atg__nested_from_padded_and_nested_example(value padded, value nt_example);
value atg__nested_from_padded_and_nested_example_out(value out, value padded, value nt_example);
value atg__nested_from_padded_out(value out, value padded, value cpu_nested_shape_example, int fuse_transform_0213);
value atg__nested_from_padded_tensor(value padded, value offsets, value dummy, int64_t ragged_idx, value min_seqlen, value max_seqlen, value sum_S);
value atg__nested_get_jagged_dummy(value any);
value atg__nested_get_lengths(value self);
value atg__nested_get_max_seqlen(value self);
value atg__nested_get_min_seqlen(value self);
value atg__nested_get_offsets(value self);
value atg__nested_get_ragged_idx(value self);
value atg__nested_get_values(value self);
value atg__nested_get_values_copy(value self);
value atg__nested_get_values_copy_out(value out, value self);
value atg__nested_select_backward(value grad_output, value self, int64_t dim, int64_t index);
value atg__nested_sum_backward(value grad, value self, value dim, int keepdim);
value atg__nested_view_from_buffer(value self, value nested_size, value nested_strides, value offsets);
value atg__nested_view_from_buffer_copy(value self, value nested_size, value nested_strides, value offsets);
value atg__nested_view_from_buffer_copy_out(value out, value self, value nested_size, value nested_strides, value offsets);
value atg__nested_view_from_jagged(value self, value offsets, value dummy, value lengths, int64_t ragged_idx, value min_seqlen, value max_seqlen);
value atg__nested_view_from_jagged_copy(value self, value offsets, value dummy, value lengths, int64_t ragged_idx, value min_seqlen, value max_seqlen);
value atg__nested_view_from_jagged_copy_out(value out, value self, value offsets, value dummy, value lengths, int64_t ragged_idx, value min_seqlen, value max_seqlen);
value atg__new_zeros_with_same_feature_meta(value self, value other, int64_t self_num_batch_dims);
value atg__new_zeros_with_same_feature_meta_out(value out, value self, value other, int64_t self_num_batch_dims);
value atg__nnpack_available();
value atg__nnpack_spatial_convolution(value input, value weight, value bias, value padding, value stride);
value atg__nnpack_spatial_convolution_out(value out, value input, value weight, value bias, value padding, value stride);
value atg__nnz(value self);
value atg__pack_padded_sequence(value input, value lengths, int batch_first);
value atg__pack_padded_sequence_backward(value grad, value input_size, value batch_sizes, int batch_first);
value atg__pack_padded_sequence_out(value out0, value out1, value input, value lengths, int batch_first);
value atg__pad_circular(value self, value pad);
value atg__pad_enum(value self, value pad, int64_t mode, value value_);
value atg__pad_packed_sequence(value data, value batch_sizes, int batch_first, value padding_value, int64_t total_length);
value atg__pdist_backward(value grad, value self, double p, value pdist);
value atg__pdist_backward_out(value out, value grad, value self, double p, value pdist);
value atg__pin_memory(value self, int device);
value atg__pin_memory_out(value out, value self, int device);
value atg__prelu_kernel(value self, value weight);
value atg__prelu_kernel_backward(value grad_output, value self, value weight);
void atg__print(const char * s);
void atg__propagate_xla_data(value input, value output);
value atg__remove_batch_dim(value self, int64_t level, int64_t batch_size, int64_t out_dim);
value atg__reshape_alias(value self, value size, value stride);
value atg__reshape_alias_copy(value self, value size, value stride);
value atg__reshape_alias_copy_out(value out, value self, value size, value stride);
value atg__reshape_copy(value self, value size);
value atg__reshape_from_tensor(value self, value shape);
value atg__resize_output(value self, value size, int device);
value atg__resize_output_(value self, value size, int device);
value atg__resize_output_out(value out, value self, value size, int device);
value atg__rowwise_prune(value weight, value mask, int compressed_indices_dtype);
value atg__safe_softmax(value self, int64_t dim, int dtype);
value atg__sample_dirichlet(value self);
value atg__sample_dirichlet_out(value out, value self);
value atg__saturate_weight_to_fp16(value weight);
value atg__scaled_dot_product_attention_math(value query, value key, value value_, value attn_mask, double dropout_p, int is_causal, value dropout_mask, value scale, int enable_gqa);
value atg__scaled_dot_product_attention_math_for_mps(value query, value key, value value_, value attn_mask, double dropout_p, int is_causal, value dropout_mask, value scale);
value atg__scaled_dot_product_cudnn_attention_backward(value grad_out, value query, value key, value value_, value out, value logsumexp, value philox_seed, value philox_offset, value attn_bias, value cum_seq_q, value cum_seq_k, int64_t max_q, int64_t max_k, double dropout_p, int is_causal, value scale);