src/bindings/torch_bindings_generated0.ml


  let stubs__native_multi_head_attention_out =
    foreign
      "atg__native_multi_head_attention_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__neg_view = foreign "atg__neg_view" (gc_tensor @-> returning raw_tensor)

  let stubs__neg_view_copy =
    foreign "atg__neg_view_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__neg_view_copy_out =
    foreign "atg__neg_view_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_compute_contiguous_strides_offsets =
    foreign
      "atg__nested_compute_contiguous_strides_offsets"
      (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__nested_from_padded =
    foreign
      "atg__nested_from_padded"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__nested_from_padded_and_nested_example =
    foreign
      "atg__nested_from_padded_and_nested_example"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_from_padded_and_nested_example_out =
    foreign
      "atg__nested_from_padded_and_nested_example_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_from_padded_out =
    foreign
      "atg__nested_from_padded_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__nested_from_padded_tensor =
    foreign
      "atg__nested_from_padded_tensor"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__nested_get_jagged_dummy =
    foreign "atg__nested_get_jagged_dummy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_lengths =
    foreign "atg__nested_get_lengths" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_max_seqlen =
    foreign "atg__nested_get_max_seqlen" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_min_seqlen =
    foreign "atg__nested_get_min_seqlen" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_offsets =
    foreign "atg__nested_get_offsets" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_ragged_idx =
    foreign "atg__nested_get_ragged_idx" (gc_tensor @-> returning int64_t)
  ;;

  let stubs__nested_get_values =
    foreign "atg__nested_get_values" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_values_copy =
    foreign "atg__nested_get_values_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_get_values_copy_out =
    foreign
      "atg__nested_get_values_copy_out"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_select_backward =
    foreign
      "atg__nested_select_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__nested_sum_backward =
    foreign
      "atg__nested_sum_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_buffer =
    foreign
      "atg__nested_view_from_buffer"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_buffer_copy =
    foreign
      "atg__nested_view_from_buffer_copy"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_buffer_copy_out =
    foreign
      "atg__nested_view_from_buffer_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_jagged =
    foreign
      "atg__nested_view_from_jagged"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_jagged_copy =
    foreign
      "atg__nested_view_from_jagged_copy"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__nested_view_from_jagged_copy_out =
    foreign
      "atg__nested_view_from_jagged_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__new_zeros_with_same_feature_meta =
    foreign
      "atg__new_zeros_with_same_feature_meta"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__new_zeros_with_same_feature_meta_out =
    foreign
      "atg__new_zeros_with_same_feature_meta_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__nnpack_available = foreign "atg__nnpack_available" (void @-> returning bool)

  let stubs__nnpack_spatial_convolution =
    foreign
      "atg__nnpack_spatial_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__nnpack_spatial_convolution_out =
    foreign
      "atg__nnpack_spatial_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__nnz = foreign "atg__nnz" (gc_tensor @-> returning int64_t)

  let stubs__pack_padded_sequence =
    foreign
      "atg__pack_padded_sequence"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs__pack_padded_sequence_backward =
    foreign
      "atg__pack_padded_sequence_backward"
      (gc_tensor @-> ptr int64_t @-> int @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__pack_padded_sequence_out =
    foreign
      "atg__pack_padded_sequence_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs__pad_circular =
    foreign
      "atg__pad_circular"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__pad_enum =
    foreign
      "atg__pad_enum"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__pad_packed_sequence =
    foreign
      "atg__pad_packed_sequence"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> scalar
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__pdist_backward =
    foreign
      "atg__pdist_backward"
      (gc_tensor @-> gc_tensor @-> double @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__pdist_backward_out =
    foreign
      "atg__pdist_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__pin_memory =
    foreign "atg__pin_memory" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__pin_memory_out =
    foreign
      "atg__pin_memory_out"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__prelu_kernel =
    foreign "atg__prelu_kernel" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__prelu_kernel_backward =
    foreign
      "atg__prelu_kernel_backward"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__print = foreign "atg__print" (string @-> returning void)

  let stubs__propagate_xla_data =
    foreign "atg__propagate_xla_data" (gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__remove_batch_dim =
    foreign
      "atg__remove_batch_dim"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__reshape_alias =
    foreign
      "atg__reshape_alias"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__reshape_alias_copy =
    foreign
      "atg__reshape_alias_copy"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__reshape_alias_copy_out =
    foreign
      "atg__reshape_alias_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__reshape_copy =
    foreign
      "atg__reshape_copy"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__reshape_from_tensor =
    foreign "atg__reshape_from_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__resize_output =
    foreign
      "atg__resize_output"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__resize_output_ =
    foreign
      "atg__resize_output_"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__resize_output_out =
    foreign
      "atg__resize_output_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__rowwise_prune =
    foreign
      "atg__rowwise_prune"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs__safe_softmax =
    foreign "atg__safe_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sample_dirichlet =
    foreign "atg__sample_dirichlet" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sample_dirichlet_out =
    foreign "atg__sample_dirichlet_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__saturate_weight_to_fp16 =
    foreign "atg__saturate_weight_to_fp16" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__scaled_dot_product_attention_math =
    foreign
      "atg__scaled_dot_product_attention_math"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> gc_tensor
       @-> double
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_dot_product_attention_math_for_mps =
    foreign
      "atg__scaled_dot_product_attention_math_for_mps"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_dot_product_cudnn_attention_backward =
    foreign
      "atg__scaled_dot_product_cudnn_attention_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning void)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
